Prevent forum index from jumping when #new-topic-post is hidden by JS.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@3828 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1920,6 +1920,7 @@ div#topic-meta h3 {
 }
 
 div#new-topic-post {
+	display: none;
 	margin: 0;
 	padding: 1px 0 0 0;
 }
